InternexDev_Sandbox/src/objects/Lockbox_Image__c.object
<CustomObject>
    <fields>
        <fullName>Date_processed__c</fullName>
        <label>Date processed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image_Name__c</fullName>
        <label>Image Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Name_formula__c</fullName>
        <formula>TRIM(UPPER(Image_Name__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Name formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_extension__c</fullName>
        <label>Image extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_path__c</fullName>
        <label>Image path</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>akritiv__Payment__c</referenceTo>
        <relationshipLabel>Payment Images URL</relationshipLabel>
        <relationshipName>Lockbox_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portal_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Portal External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>Lockbox Images</relationshipLabel>
        <relationshipName>Lockbox_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zip_File_Name__c</fullName>
        <label>Zip File Name</label>
        <type>TextArea</type>
    </fields>
    <label>Lockbox Image</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LIN-{000000}</displayFormat>
        <label>Lockbox Image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lockbox Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>